HW6, code refacoting, getAllSorted moved to AbstractStorage